--- a/css/style.scss
+++ b/css/style.scss
@@ -31,7 +31,8 @@ a{
 #wrapper{
     margin: auto;
     min-width: 35em;
-    max-width: 50vw;
+    //max-width: 50vw;
+    max-width: 51em;
     display: flex;
     flex-direction: column;
 
