--- a/css/style.scss
+++ b/css/style.scss
@@ -86,10 +86,13 @@ b {
 
 .highlight .s { color: #e55; }
 .highlight .sc{ color: #f99; }
+.highlight .s2{ color: #f99; }
 .highlight .se{ color: #f99; }
 .highlight .kn{ color: #5bb; }
+.highlight .kd{ color: #5bb; }
 .highlight .nb{ color: #5bb; }
 .highlight .mi{ color: #c6b; }
+.highlight .mh{ color: #c6b; }
 .highlight .kt{ color: #3e7; }
 //.highlight .nc{ color: #3e7; }
 .highlight .k { color: #dd7; }
