--- a/_includes/header.html
+++ b/_includes/header.html
@@ -27,10 +27,10 @@ _______________________________________________
         </pre>
     </div> 
         <ul id='menu'>
-          <li><a href='/index.html'>Home</a></li>
-          <li><a href='/about.html'>About</a></li>
-          <li><a href='/en'>English posts</a></li>
-          <li><a href='/pl'>Polish posts</a></li>
+          <li><a href='/index.html'>/home</a></li>
+          <li><a href='/about.html'>about</a></li>
+          <li><a href='/en'>en/</a></li>
+          <li><a href='/pl'>pl/</a></li>
         </ul>
     <hr id='pagesplit'>
     <div id='content'>
