--- a/css/style.scss
+++ b/css/style.scss
@@ -13,6 +13,10 @@ body{
     font-family: 'Ubuntu Mono', monospace;
 }
 
+strong{
+  color: #fff;
+}
+
 pre{
     white-space: pre-wrap;
     overflow-x: auto;
@@ -83,19 +87,24 @@ b {
   display: block;
 }
 
-.highlight .s { color: #e55; }
-.highlight .si{ color: #f66; }
-.highlight .sc{ color: #f99; }
-.highlight .s2{ color: #f99; }
-.highlight .se{ color: #f99; }
-.highlight .kn{ color: #5bb; }
-.highlight .kd{ color: #5bb; }
-.highlight .nb{ color: #5bb; }
-.highlight .mi{ color: #c6b; }
-.highlight .mh{ color: #c6b; }
-.highlight .kt{ color: #3e7; }
 //.highlight .nc{ color: #3e7; }
-.highlight .k { color: #dd7; }
-.highlight .ow{ color: #dd7; }
-.highlight .c1{ color: #39d; }
-.highlight .cm{ color: #39d; }
+.highlight {
+  .s { color: #e55; }
+  .si{ color: #f66; }
+  .sc{ color: #f99; }
+  .s2{ color: #f99; }
+  .se{ color: #f99; }
+  .kn{ color: #5bb; }
+  .kd{ color: #5bb; }
+  .nb{ color: #5bb; }
+  .mi{ color: #c6b; }
+  .mh{ color: #c6b; }
+  .kt{ color: #3e7; }
+  .k { color: #dd7; }
+  .ow{ color: #dd7; }
+  .c1{ color: #39d; }
+  .cm{ color: #39d; }
+  .cp{ color: #f7c; }
+  .n { color: #aaf; }
+}
+
